// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component snapshots matches snapshot with custom size 1`] = `
<DocumentFragment>
  <button
    aria-disabled="false"
    class="styles__StyledButton-sc-5pc2aq-1 fEzqKk primary "
    type="button"
  >
    <span
      class="styles__BtnChild-sc-5pc2aq-2 cBBqTe"
    >
      Large Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button component snapshots matches snapshot with default props 1`] = `
<DocumentFragment>
  <button
    aria-disabled="false"
    class="styles__StyledButton-sc-5pc2aq-1 fEzqKk primary "
    type="button"
  >
    <span
      class="styles__BtnChild-sc-5pc2aq-2 cBBqTe"
    >
      Click me!!
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button component snapshots matches snapshot with primary style 1`] = `
<DocumentFragment>
  <button
    aria-disabled="false"
    class="styles__StyledButton-sc-5pc2aq-1 fEzqKk primary "
    type="button"
  />
</DocumentFragment>
`;
